--- a/OnlineBookStore/OnlineBookStore/OnlineBookStore.csproj
+++ b/OnlineBookStore/OnlineBookStore/OnlineBookStore.csproj
@@ -169,6 +169,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-OnlineBookStore-20170726064347.mdf" />
+    <Content Include="App_Data\aspnet-OnlineBookStore-20170726064347_log.ldf">
+      <DependentUpon>aspnet-OnlineBookStore-20170726064347.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -215,9 +219,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
