--- a/OnlineBookStore/OnlineBookStore/Web.config
+++ b/OnlineBookStore/OnlineBookStore/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OnlineBookStore-20170726064347.mdf;Initial Catalog=aspnet-OnlineBookStore-20170726064347;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OnlineBookStore-20170726064347.mdf;Initial Catalog=OnlineBookStore;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
